--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "4",
     "react": "^17.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "^4.0.2"
